[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celery-roquefort"
version = "0.11.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery>=5.5.3",
    "click>=8.1.8",
    "fastapi>=0.115.13",
    "prometheus-client>=0.21.1",
    "redis>=6.2.0",
    "uvicorn>=0.33.0",
]

[project.scripts]
roquefort = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    "black>=25.1.0",
]
